Jul. 5 2011
Basic animation on named frames.

Jul. 3 2011
Rendering.
Basic animating.

Jun. 26 2011
Canvas, Sprite etc.
Controller interface.
Message system.
Main loop logic.
Basic render flow.

Jun. 14 2011
Project started.